[tool.poetry]
name = "dd-trader"
version = "0.2.2"
description = "dd-trader"
authors = ["Charleez"]
license = "CCO-1.0"
readme = "README.md"
homepage = "https://github.com/CharleezGithub/dd-trader"
repository = "https://github.com/CharleezGithub/dd-trader"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/CharleezGithub/dd-trader/releases"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
